update package.json repo

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "migrationtimestamp",
   "displayName": "MigrationTimestamp",
   "description": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/reedpatterson/migrationtimestamp"
+  },
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.80.0"
