--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "migrationtimestamp",
   "displayName": "MigrationTimestamp",
   "description": "",
+  "publisher": "reedpatterson",
   "repository": {
     "type": "git",
     "url": "https://github.com/reedpatterson/migrationtimestamp"
